[tool.poetry]
name = "arduinoOTA"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
yamllint = "^1.37.0"
codespell = "^2.4.1"

# The dependencies in this group are installed using pipx; NOT Poetry. The use of a `poetry` section is a hack required
# in order to be able to manage updates of these dependencies via Dependabot, as used for all other dependencies.
[tool.poetry.group.pipx]
optional = true

[tool.poetry.group.pipx.dependencies]
poetry = "2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
